--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
   <!-- Using Local Font -->
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/index.css" />
 
-  <title>Versus V2.0</title>
+  <title>Dashboard | React</title>
   <meta name="description"
     content="" />
   <meta name="keywords" content="" />
-  <meta name="author" content="Versus Dashboard v2" />
+  <meta name="author" content="React Dashboard" />
 </head>
 
 <body>
